--- a/fuelmenu/settings.yaml
+++ b/fuelmenu/settings.yaml
@@ -8,6 +8,8 @@ ADMIN_NETWORK:
   cidr: "10.20.0.0/24"
   netmask: "255.255.255.0"
   size: "256"
-  first: "10.20.0.129"
+  static_start: "10.20.0.10"
+  static_end: "10.20.0.120"
+  first: "10.20.0.130"
   last: "10.20.0.254"
 
