cleanup dhcp-checker, make fuelmenu optional

--- a/iso/isolinux/isolinux.cfg
+++ b/iso/isolinux/isolinux.cfg
@@ -1,6 +1,8 @@
 default vesamenu.c32
 #prompt 1
 timeout 300
+F1 boot.msg
+F2 f2
 
 display boot.msg
 
@@ -19,4 +21,4 @@ label nailgunstatic
   menu label Fuel Install (^Static IP)
   menu default
   kernel vmlinuz
-  append initrd=initrd.img biosdevname=0 ks=cdrom:/ks.cfg ip=10.20.0.2 gw=10.20.0.1 dns1=10.20.0.1 netmask=255.255.255.0 hostname=fuel.domain.tld
+  append initrd=initrd.img biosdevname=0 ks=cdrom:/ks.cfg showmenu=no ip=10.20.0.2 gw=10.20.0.1 dns1=10.20.0.1 netmask=255.255.255.0 hostname=fuel.domain.tld 
