--- a/fuelmenu/MANIFEST.in
+++ b/fuelmenu/MANIFEST.in
@@ -1,2 +1,4 @@
 recursive-include fuelmenu *.py *.yaml *.default
-recursive-include fuelmenu *
+include setup.py
+include README
+#recursive-include fuelmenu *
